fixed whitespace issue when editing comment

--- a/styles.css
+++ b/styles.css
@@ -234,6 +234,10 @@ h3 {
     font-size: 16px;
     border: 1px solid hsl(223, 19%, 93%);
     border-radius: 7px; 
+    resize: vertical;
+    box-sizing: border-box;
+    display: block;
+    white-space: normal;  
 }
 
 .primary-button, .yes, .no {
@@ -342,9 +346,6 @@ textarea:focus {
     }
 
     .comment-section textarea {
-        grid-column-start: 1;
-        grid-row-start: 1;
-        grid-column: span 2;
         margin-bottom: 10px;
         width: 100%;
     }
